# professor-pixel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  STANDARDS.md  biome.json  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agent-state/: decisions.ndjson  directive.md
.github/: dependabot.yml
.github/workflows/: cd-mobile.yml  cd.yml  ci.yml  release.yml
.maestro/: smoke.yaml
android/app/: build.gradle  signing.properties.example
app/: App.tsx  index.css  main.tsx
app/components/: audio-toggle.tsx  dev-hud.tsx  error-boundary.tsx  floating-feedback.tsx  game-progress-sidebar.tsx  header.tsx  help-modal.tsx  index.ts  offline-banner.tsx  storage-blocked-notice.tsx
app/pages/: home.tsx  index.ts  lesson.tsx  lessons.tsx  not-found.tsx  play.tsx  profile.tsx
artifacts/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  README.md  STATE.md  TESTING.md
docs/audits/: 2026-05-08-functional-truth-audit.md
docs/pillars/: 01-frontend.md  02-runtime.md  03-lesson-engine.md  04-grading.md  05-design-system.md  06-storage.md  07-deploy.md
docs/plans/: any-cleanup-pillar.prq.md  finishing-pillar.prq.md  foundations-pillar-completion.prq.md  grader-followups-pillar.prq.md  modernization-pillar.prq.md  (+8 more)
playwright-report/: index.html
public/: manifest.webmanifest  pyodide-sw.js
scripts/: audit-ui-as-shell.mjs  build-asset-catalog.mjs  copy-pyodide.mjs  test-android-smoke.mjs
(+479 files in other folders)
